fix header title and button spacing and size for mobile

--- a/main.css
+++ b/main.css
@@ -286,6 +286,7 @@ ul {
     position: relative;
     height: auto;
     width: 100%;
+    padding: 8vh 0;
 }
 
 .inquiries-section .inquiries-bg {
